--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "bootstrap-datepicker": "^1.7.1",
-    "bootstrap-fileinput": "^4.4.6"
+    "bootstrap-fileinput": "^4.4.6",
+    "bootswatch": "^3.3.7"
   }
 }
-
