--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "fideloper/proxy": "^4.0",
     "laravel/framework": "5.6.*",
     "laravel/tinker": "^1.0",
-    "mews/purifier": "^2.1"
+    "mews/purifier": "^2.1",
+    "predis/predis": "^1.1"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.4",
