--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "lodash": "^4.17.4"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.3.5"
     }
 }
