--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "laravel/framework": "5.6.*",
     "laravel/tinker": "^1.0",
     "mews/purifier": "^2.1",
-    "predis/predis": "^1.1"
+    "predis/predis": "^1.1",
+    "symfony/polyfill-iconv": "^1.8"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.4",
