--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
     "laravel/framework": "5.6.*",
     "laravel/tinker": "^1.0",
     "mews/purifier": "^2.1",
+    "phpoffice/phpspreadsheet": "^1.3",
     "predis/predis": "^1.1",
     "symfony/polyfill-iconv": "^1.8"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.4",
+    "doctrine/dbal": "^2.7",
     "filp/whoops": "^2.0",
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
